# robit

./: Cargo.toml
src/: lib.rs  main.rs  model.rs
src/activations/: mod.rs
src/initializers/: mod.rs  ones.rs  random_distr.rs  zeros.rs
src/layers/: dense.rs  input.rs  mod.rs  pipe.rs
src/losses/: mod.rs  mse.rs
src/optimizers/: mod.rs  sgd.rs
